# basic-agent

./: .gitignore  README.md
agent/: .env.example  .gitignore  README.md  pyproject.toml
agent/src/basic_agent/: __init__.py  main.py
agent/src/basic_agent/agents/: __init__.py  base.py  chat_agent.py
agent/src/basic_agent/api/: deps.py
agent/src/basic_agent/api/routes/: chat.py  health.py
agent/src/basic_agent/core/: __init__.py  config.py  logging.py
agent/src/basic_agent/memory/: README.md
agent/src/basic_agent/protocol/: __init__.py  ui_stream.py
agent/src/basic_agent/providers/: __init__.py  base.py  dashscope.py
agent/src/basic_agent/schemas/: __init__.py  chat.py  ui_message.py
agent/src/basic_agent/tools/: README.md
docs/: README.md  stage-01-basic-chat.md  stage-02-frontend-tooling.md
web/: .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
web/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  MessageItem.tsx  MessageList.tsx
web/src/components/chat/MessageParts/: TextPart.tsx  index.tsx
web/src/hooks/: useAutoScroll.ts
web/src/lib/: env.ts
web/src/pages/: ChatPage.tsx
web/src/services/: chatTransport.ts  http.ts
web/src/store/: settingsStore.ts
web/src/types/: chat.ts
