[project]
name = "basic-agent"
version = "0.1.0"
description = "Basic Agent backend (FastAPI + LangChain) for the basic-agent project."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/basic_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
